fix: horizontal scroll

--- a/src/app/App.module.scss
+++ b/src/app/App.module.scss
@@ -1,8 +1,6 @@
 .root {
-	width: 100vw;
-	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	font-family: "Roboto", serif;
-	overflow-x: hidden;
+	padding-bottom: 25px;
 }
